--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 [tool.poetry.group.dev.dependencies]
 black = {version = "^23.1a1", allow-prereleases = true}
 mypy = "^0.991"
+pytest = "^7.2.1"
 
 [tool.poetry.scripts]
 typegen = "fhir_py_types.cli:main"
