Move spec bundle download out of container build pipeline

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,4 +3,5 @@ services:
     build: .
     volumes:
       - ./fhir_py_types:/app/fhir_py_types
+      - ./spec:/app/spec
       - ./generated:/app/generated
