--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,13 @@ python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
 black = {version = "^23.1a1", allow-prereleases = true}
-mypy = "^0.991"
 pytest = "^7.2.1"
+
+[tool.poetry.group.typecheckers]
+optional = true
+
+[tool.poetry.group.typecheckers.dependencies]
+mypy = "^0.991"
 
 [tool.poetry.scripts]
 typegen = "fhir_py_types.cli:main"
