--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,4 @@ jobs:
         pip install poetry
         poetry install
     - name: Test with pytest
-      run: |
-        poetry run pytest
+      run: poetry run pytest tests/
