--- a/.github/workflows/synthea_regression_test.yml
+++ b/.github/workflows/synthea_regression_test.yml
@@ -1,16 +1,18 @@
 name: Synthea Samples Regression Test
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_run:
+    workflows: ["Test"]
+    branches: ["main"]
+    types: ["completed"]
 
 permissions:
   contents: read
 
 jobs:
-  build:
+  validate-generated-models:
     runs-on: ubuntu-latest
-
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.11
