Run Synthea regression test after spec parsing test is completed

--- a/.github/workflows/synthea_regression_test.yml
+++ b/.github/workflows/synthea_regression_test.yml
@@ -2,7 +2,7 @@ name: Synthea Samples Regression Test
 
 on:
   workflow_run:
-    workflows: ["Test"]
+    workflows: ["Spec Resource Models Generation Regression Test"]
     branches: ["main"]
     types: ["completed"]
 
