--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pydantic = "^1.10.7"
 [tool.poetry.group.dev.dependencies]
 black = {version = "^23.1a1", allow-prereleases = true}
 pytest = "^7.2.1"
+ruff = "^0.0.280"
 
 [tool.poetry.group.typecheckers.dependencies]
 mypy = "^1.0.0"
