--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "fhir-py-types"
 version = "0.2.0"
-description = ""
+description = "Convert FHIR StructureDefinition into Python type annotations"
 authors = ["beda.software <info@beda.software>"]
 packages = [{include = "fhir_py_types"}]
 
