Configure autohooks to run formatter/typechecker/linter on pre-commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,14 @@ pydantic = "^1.10.7"
 black = {version = "^23.1a1", allow-prereleases = true}
 pytest = "^7.2.1"
 ruff = "^0.0.280"
+autohooks = "^23.7.0"
+autohooks-plugin-black = "^23.7.0"
+autohooks-plugin-mypy = "^23.3.0"
+autohooks-plugin-ruff = "^23.6.1"
+
+[tool.autohooks]
+mode = "poetry"
+pre-commit = ["autohooks.plugins.black", "autohooks.plugins.mypy", "autohooks.plugins.ruff"]
 
 [tool.poetry.group.typecheckers.dependencies]
 mypy = "^1.0.0"
